tool/src/c/snapshots/diplomat_tool__c__types__tests__result_types@MyStruct_type.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyStruct_type_H
#define MyStruct_type_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#include "diplomat_result_box_MyStruct_uint8_t.h"
#ifdef __cplusplus
namespace capi {
#endif // __cplusplus

typedef struct MyStruct {
    diplomat_result_box_MyStruct_uint8_t a;
} MyStruct;
#ifdef __cplusplus
} // namespace capi
#endif // __cplusplus
#endif // MyStruct_type_H

