tool/src/c/snapshots/diplomat_tool__c__types__tests__result_types@diplomat_result_MyStruct_uint8_t.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()
---
#ifndef diplomat_result_MyStruct_uint8_t_H
#define diplomat_result_MyStruct_uint8_t_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
extern "C" {
#endif
#include "MyStruct.h"
typedef struct diplomat_result_MyStruct_uint8_t {
    union {
        MyStruct ok;
        uint8_t err;
    };
    bool is_ok;
} diplomat_result_MyStruct_uint8_t;
#ifdef __cplusplus
}
#endif
#endif

