tool/src/c/snapshots/diplomat_tool__c__types__tests__unit_type@MyStruct.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()

---
#ifndef MyStruct_H
#define MyStruct_H
#include <stdio.h>
#include <uchar.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
extern "C" {
#endif

typedef struct MyStruct {
} MyStruct;

void MyStruct_something(const MyStruct* self);
void MyStruct_destroy(MyStruct* self);

#ifdef __cplusplus
}
#endif
#endif

