tool/src/c/snapshots/diplomat_tool__c__types__tests__write_out@MyStruct.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyStruct_H
#define MyStruct_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"

#ifdef __cplusplus
namespace capi {
#endif

typedef struct MyStruct {
} MyStruct;
#ifdef __cplusplus
} // namespace capi
#endif
#ifdef __cplusplus
namespace capi {
extern "C" {
#endif

void MyStruct_write(const MyStruct* self, DiplomatWrite* to);

#ifdef __cplusplus
} // extern "C"
} // namespace capi
#endif
#endif
