tool/src/c/snapshots/diplomat_tool__c__types__tests__writeable_out@MyStruct.h.snap
---
source: tool/src/c/types.rs
expression: out_texts.get(out).unwrap()
---
#ifndef MyStruct_H
#define MyStruct_H
#include <stdio.h>
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>
#include "diplomat_runtime.h"
#include "MyStruct_type.h"
#ifdef __cplusplus
namespace capi {
extern "C" {
#endif

void MyStruct_write(const MyStruct* self, DiplomatWriteable* to);
void MyStruct_destroy(MyStruct* self);

#ifdef __cplusplus
} // extern "C"
} // namespace capi
#endif // __cplusplus
#endif // MyStruct_H

